--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nolook2222</title>
+    <title>당신에게 맞추다 Fit To You</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./asset/css/style.css">
 </head>
@@ -122,19 +122,19 @@
                     <div class="swiper slide03">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide slide-item01">
-                                <img src="/asset/images/content/etc/design02.png" alt="">
+                                <img src="./asset/images/content/etc/design02.png" alt="">
                             </div>
                             <div class="swiper-slide slide-item02">
-                                <img src="/asset/images/content/etc/design03.png" alt="">
+                                <img src="./asset/images/content/etc/design03.png" alt="">
                             </div>
                             <div class="swiper-slide slide-item03">
-                                <img src="/asset/images/content/etc/design04.png" alt="">
+                                <img src="./asset/images/content/etc/design04.png" alt="">
                             </div>
                             <div class="swiper-slide slide-item04">
-                                <img src="/asset/images/content/etc/design05.png" alt="">
+                                <img src="./asset/images/content/etc/design05.png" alt="">
                             </div>
                             <div class="swiper-slide slide-item05">
-                                <img src="/asset/images/content/etc/design06.png" alt="">
+                                <img src="./asset/images/content/etc/design06.png" alt="">
                             </div>
                         </div>
                         
